--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,6 +54,7 @@
 
 .user-list-2 li{
     color: var(--color-white);
+    margin-bottom: 5px;
 }
 
 .user-list-2 li a{
@@ -61,6 +62,13 @@
     color: var(--color-white);
 }
 
+.user-list-2 li:hover{
+    background-color:rgba(109, 109, 109, 0.6);
+}
+
+.admin:hover{
+    background-color:rgba(109, 109, 109, 0.6);
+}
 
 
 
